# aisl_utils

./: README.md
aisl_launch/: CMakeLists.txt  package.xml
aisl_launch/launch/: .pointcloud_gmapping.launch.swp  pointcloud_gmapping.launch  rgbd_mapping_kinect.launch  rgbd_mapping_kinect2.launch  turtlebot_move_base.launch  turtlebot_move_base_2.launch
aisl_launch/params/: ukf_visual_icp_rtabmap.yaml
aisl_launch/params/turtlebot_move_base/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml
aisl_msgs/: CMakeLists.txt  package.xml
aisl_msgs/deep_learning_msgs/: CMakeLists.txt  package.xml
aisl_msgs/deep_learning_msgs/msg/: KeypointDetection.msg  SemanticSegmentation.msg
aisl_rospy_pkg/: CMakeLists.txt  package.xml  setup.py
aisl_rospy_pkg/src/robot_interface/: __init__.py  robot_interface.py
aisl_srvs/: CMakeLists.txt  package.xml
aisl_srvs/instance_segmentation_srv/: CMakeLists.txt  package.xml
aisl_srvs/instance_segmentation_srv/srv/: GetInstanceSegmentation.srv
aisl_srvs/keypoint_detection_srv/: CMakeLists.txt  package.xml
aisl_srvs/keypoint_detection_srv/srv/: GetKeypointDetection.srv
aisl_srvs/robot_manipulation_srv/: CMakeLists.txt  package.xml
aisl_srvs/robot_manipulation_srv/srv/: PutObject.srv
aisl_srvs/semantic_segmentation_srv/: CMakeLists.txt  package.xml
aisl_srvs/semantic_segmentation_srv/srv/: GetLabelAndProbability.srv  GetLabelImage.srv
aisl_srvs/srv/: FetchObject.srv  GetLabelImage.srv
